--- a/views/index.html
+++ b/views/index.html
@@ -85,8 +85,9 @@
                 <!-- EDIT ME -->
                 <h2>About Us</h2>
             <p>
-            tutkia (v): to examine or investigate something systematically; to travel somewhere in search of discovery; to experience first hand; to acquire knowledge. </p>
-            <p>We are a research oriented organization with an underpinning desire to provide information that matters. Search engines may hand you thousands and thousands of pages of information: the map for your journey. We provide the directions. </p>
+            tutkia (v) : to examine or investigate something systematically; to travel somewhere in search of discovery; to experience first hand; to acquire knowledge. </p>
+            <p>
+            Tuutkia (n) : a research oriented organization with an underpinning desire to provide information that matters. Search engines may hand you thousands and thousands of pages of information: the map for your journey. We provide the directions. </p>
             <p>Have you ever gotten frustrated at the numerous links provided by traditional search engines which are nothing but a painful sift through? Are you struggling to find a jewel in the information landfill?</p>
             </div>
         </div>
@@ -103,7 +104,6 @@
                         <!-- EDIT ME -->
                     <a href="mailto:matthew@tuutkia.com" class="btn btn-default btn-lg" target="_blank">Email Us</a></li>
                     <a href="http://www.linkedin.com/company/tuutkia-llc" class="btn btn-default btn-lg" target="_blank">Linkedin</a></ul>
-                    <img src="static/img/logoonblack.png" alt="logo" height="500" width ="500" align = "middle">
                 </div>
             </div>
         </div>
