--- a/views/index.html
+++ b/views/index.html
@@ -87,8 +87,10 @@
             <p>
             tutkia (v) : to examine or investigate something systematically; to travel somewhere in search of discovery; to experience first hand; to acquire knowledge. </p>
             <p>
-            Tuutkia (n) : a research oriented organization with an underpinning desire to provide information that matters. Search engines may hand you thousands and thousands of pages of information: the map for your journey. We provide the directions. </p>
+            Tuutkia (n) : a research oriented company focusing on providing information that matters. Search engines may hand you thousands and thousands of pages of information: the map for your journey. We provide the directions. </p>
             <p>Have you ever gotten frustrated at the numerous links provided by traditional search engines which are nothing but a painful sift through? Are you struggling to find a jewel in the information landfill?</p>
+            <p>Coming soon.</p>
+            
             </div>
         </div>
     </section>
@@ -102,8 +104,8 @@
                     <h2>Contact Us</h2>
                     <ul class="list-inline banner-social-buttons">
                         <!-- EDIT ME -->
-                    <a href="mailto:matthew@tuutkia.com" class="btn btn-default btn-lg" target="_blank">Email Us</a></li>
-                    <a href="http://www.linkedin.com/company/tuutkia-llc" class="btn btn-default btn-lg" target="_blank">Linkedin</a></ul>
+                    <a href="http://www.linkedin.com/company/tuutkia-llc" class="btn btn-default btn-lg" target="_blank">Join Us on LinkedIn</a></ul>
+                    <a href="mailto:matthew@tuutkia.com" class="btn btn-default btn-lg" target="_blank">Email Us</a></li> 
                 </div>
             </div>
         </div>
