--- a/static/css/grayscale.css
+++ b/static/css/grayscale.css
@@ -29,7 +29,6 @@ h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    text-transform: uppercase;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
@@ -134,12 +133,9 @@ a:focus {
 .intro {
     display: table;
     width: 100%;
-    min-height: 600px;
-    height: auto;
-    padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/outro.png) no-repeat center top scroll;
+    background: url(../img/outro.png) no-repeat center top fixed;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
