--- a/views/index.html
+++ b/views/index.html
@@ -68,7 +68,12 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <!-- EDIT ME -->
-                        <p></p><img src="static/img/logo.png" alt="signature" height="400" width ="400" align = "middle"> 
+                        <p></p><p><img src="static/img/logo.png" alt="signature" height="500" width ="500" align = "middle"></p>
+                        <div class="page-scroll">
+                            <a href="#about" class="btn btn-circle">
+                                <i class="fa fa-angle-double-down animated"></i>
+                            </a><p></p><p></p><p></p>
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -101,7 +106,6 @@
                     <ul class="list-inline banner-social-buttons">
                     <a href="http://www.linkedin.com/company/tuutkia-llc" class="btn btn-default btn-lg" target="_blank">Join Us on LinkedIn</a></ul>
                     <a href="mailto:matthew@tuutkia.com" class="btn btn-default btn-lg" target="_blank">Email Us</a></li></p>
-                    <img src="static/img/logo.png" alt="signature" height="600" width ="600" align = "middle"> 
                 </div>
             </div>
         </div>
