--- a/static/css/grayscale.css
+++ b/static/css/grayscale.css
@@ -3,6 +3,7 @@ body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
     color: #fff;
+    font-size:30px;
     background-color: #000;
 }
 
@@ -12,7 +13,7 @@ html {
 }
 
 h1 {
-    color: orange;
+    color: white;
     font-size: 40px;
     font-family: 'Roboto', sans-serif;
     text-align: center;
@@ -20,8 +21,8 @@ h1 {
 h2 {
     color: orange;
     font-family: 'Roboto', sans-serif;
-    text-transform: uppercase;
     line-height: 2.0;
+    text-transform: uppercase;
     text-align: center;
 }
 h3,
@@ -36,15 +37,20 @@ h6 {
 
 p {
     margin: 0 0 25px;
-    font-size: 18px;
-    line-height: 1.5;
+    font-size: 10px;
+    line-height: 1;
+}
+
+img
+{
+    vertical-align:text-bottom;
 }
 
 @media(min-width:767px) {
     p {
         margin: 0 0 35px;
         font-size: 20px;
-        line-height: 1.6;
+        line-height: 1.5;
     }
 }
 
@@ -68,7 +74,6 @@ a:focus {
 .navbar {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
-    text-transform: uppercase;
     font-family: 'Roboto Condensed',sans-serif;
     color: black;
 }
@@ -134,8 +139,9 @@ a:focus {
     display: table;
     width: 100%;
     text-align: center;
-    color: #fff;
-    background: url(../img/outro.png) no-repeat center top fixed;
+    height: 100%;
+    color: orange;
+    background: url(../img/background.jpg) no-repeat center top fixed;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -253,14 +259,11 @@ a:focus {
 
 .my_work-section {
     width: 100%;
-    padding: 50px 0;
     color: #fff;
-    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+    font-size:30px;
     background-color: #000;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    text-align:center;
+    height:100%;
 }
 
 @media(min-width:767px) {
@@ -271,7 +274,7 @@ a:focus {
 
 .btn {
     text-transform: uppercase;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     font-weight: 400;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
@@ -309,7 +312,7 @@ a:focus {
     padding: 100px;
     text-align: center;
     color: #fff;
-    background: url(../img/outro.png);
+    background: url(../img/background.jpg);
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
