--- a/views/index.html
+++ b/views/index.html
@@ -27,89 +27,25 @@
 
   
 </head>
-
-<body id="page-top" data-spy="scroll" data-target=".navbar-custom">
-
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Tuutkia</span>
-                </a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#about">About Us</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact Us</a>
-                    </li>
-
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
+<body style="overflow:hidden;">
     <section class="intro">
         <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <!-- EDIT ME -->
-                        <p></p><p><img src="static/img/logo.png" alt="signature" height="500" width ="500" align = "middle"></p>
-                        <div class="page-scroll">
-                            <a href="#about" class="btn btn-circle">
-                                <i class="fa fa-angle-double-down animated"></i>
-                            </a><p></p><p></p><p></p>
-                        </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                        <p><img src="static/img/logo2.png" alt="signature" height="450" width ="450" align = "middle"></p>
         </div>
     </section>
 
-    <section id="about" class="container content-section text-center">
+    <section class="my_work-section">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Us</h2>
-            <p>
-            tutkia (v) : to examine or investigate something systematically; to travel somewhere in search of discovery; to experience first hand; to acquire knowledge. </p>
-            <p>
-            Tuutkia (n) : a research oriented company focusing on providing information that matters. Search engines may hand you thousands and thousands of pages of information: the map for your journey. We provide the directions. </p>
-            <p>Have you ever gotten frustrated at the numerous links provided by traditional search engines which are nothing but a painful sift through? Are you struggling to find a jewel in the information landfill?</p>
-            <p> Welcome to the future of the information age. Start searching smart.</p>
-            <p>  </p>
-
+            <p>Tuutkia is a research oriented company focused on giving information that simply matters. </p>
+            <p>Search engines may hand you the map for your journey. We provide the directions.</p>
+                <h2>Interested?</h2>
+            <ul class="list-inline banner-social-buttons">
+            <a href="http://www.linkedin.com/company/tuutkia-llc" class="btn btn-default btn-lg" target="_blank">Join Us on LinkedIn</a></ul> 
+            <a href="mailto:matthew@tuutkia.com" class="btn btn-default btn-lg" target="_blank">Email Us</a>
             </div>
-        </div>
     </section>
-
-
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Contact Us</h2>
-                    <ul class="list-inline banner-social-buttons">
-                    <a href="http://www.linkedin.com/company/tuutkia-llc" class="btn btn-default btn-lg" target="_blank">Join Us on LinkedIn</a></ul>
-                    <a href="mailto:matthew@tuutkia.com" class="btn btn-default btn-lg" target="_blank">Email Us</a></li></p>
-                </div>
-            </div>
-        </div>
-    </section>
+</body>
 
     <!-- Core JavaScript Files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -119,6 +55,6 @@
     <!-- Custom Theme JavaScript -->
     <script src="static/js/grayscale.js"></script>
 
-</body>
+
 
 </html>
