--- a/views/index.html
+++ b/views/index.html
@@ -27,22 +27,23 @@
 
   
 </head>
-<body style="overflow:hidden;">
+<body style="overflow-x:auto; overflow-y:auto;">
     <section class="intro">
         <div class="intro-body">
-                        <p><img src="static/img/logo2.png" alt="signature" height="450" width ="450" align = "middle"></p>
+                        <p><img src="static/img/logo2.png" alt="signature" align = "middle"></p>
         </div>
     </section>
 
-    <section class="my_work-section">
+    <section class="contact">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-            <p>Tuutkia is a research oriented company focused on giving information that simply matters. </p>
-            <p>Search engines may hand you the map for your journey. We provide the directions.</p>
+            <p>Tuutkia is a research oriented company focused on giving information that simply matters.</p>
+            <p>Search engines may hand you the map for your journey. We provide the directions. </p>
                 <h2>Interested?</h2>
             <ul class="list-inline banner-social-buttons">
-            <a href="http://www.linkedin.com/company/tuutkia-llc" class="btn btn-default btn-lg" target="_blank">Join Us on LinkedIn</a></ul> 
+            <a href="http://www.linkedin.com/company/tuutkia-llc" class="btn btn-default btn-lg" target="_blank">Join Us on LinkedIn</a>
             <a href="mailto:matthew@tuutkia.com" class="btn btn-default btn-lg" target="_blank">Email Us</a>
+            <a href="blog.tuutkia.com" class="btn btn-default btn-lg" target="_blank">Follow Our Blog</a></ul>
             </div>
     </section>
 </body>
