--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,7 @@
             <ul class="list-inline banner-social-buttons">
             <a href="http://www.linkedin.com/company/tuutkia-llc" class="btn btn-default btn-lg" target="_blank">Join Us on LinkedIn</a>
             <a href="mailto:matthew@tuutkia.com" class="btn btn-default btn-lg" target="_blank">Email Us</a>
-            <a href="blog.tuutkia.com" class="btn btn-default btn-lg" target="_blank">Follow Our Blog</a></ul>
+            <a href="http://blog.tuutkia.com" class="btn btn-default btn-lg" target="_blank">Follow Our Blog</a></ul>
             </div>
     </section>
 </body>
